--- a/.editorconfig
+++ b/.editorconfig
@@ -22,5 +22,7 @@ trim_trailing_whitespace = false
 indent_style = tab
 
 [*.yml]
-indent_style = space
+indent_size = 4
+
+[*.java]
 indent_size = 4
