--- a/movie-store/pom.xml
+++ b/movie-store/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.michelfigueiredo.examples</groupId>
-    <artifactId>tdd-movie-store</artifactId>
+    <artifactId>movie-store</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
